Mobile Ui Anpassen, Button gedrückt halten Bug beheben durch mobile Erkennung und Start von Jump Button einbauen server und clientseitig

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -32,6 +32,9 @@ body {
     background-attachment: fixed;
     background-position: center center;
     touch-action: manipulation;
+    -webkit-user-select: none !important;
+    user-select: none !important;
+    overflow: hidden;
 }
 
 .lobbyText{
@@ -41,6 +44,7 @@ body {
 }
 
 .start-btn{
+    font-family: 'Press Start 2P', cursive;
     text-align: center;
 	display: inline-block;
     align-items: center;
@@ -67,11 +71,13 @@ body {
 }
 
 .playBtns {
-    width: 30vh;
-    height: 30vh;
-    /* opacity: 0.9; */
+    width: 25vh;
+    height: 25vh;
     touch-action: manipulation;
     outline: none;
+    margin-top: 5vh;
+    -webkit-user-select: none !important;
+    user-select: none !important;
 }
 
 .form__group {
